# atlassian-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  install.ps1  install.sh  pyproject.toml
.claude/: settings.json
atlassian_cli/: config.py  main.py  mcp.py
atlassian_cli/commands/: adr.py  feature.py  issue.py  memory.py  plan.py  prd.py  project.py  qa.py
atlassian_cli/integrations/: confluence.py  jira.py  ollama.py  turso.py
atlassian_cli/models/: adr.py  feature.py  memory.py  plan.py  prd.py  qa.py
atlassian_cli/storage/: local.py  memory_store.py
docs/: architecture.html  architecture_phase4a.html  architecture_phase4b.html  architecture_phase4b_impl.html
docs/superpowers/plans/: 2026-06-09-atlassian-cli-phase1.md  2026-06-09-atlassian-cli-phase2.md  2026-06-10-atlassian-cli-phase3.md  2026-06-13-phase4a-memory-subsystem.md  2026-06-13-phase4b-adr-and-bug-memory.md  2026-06-13-phase4c-claude-md-snapshot.md  2026-06-14-phase5-turso-shared-memory.md  2026-06-14-phase6-issue-lifecycle.md  2026-06-14-phase6b-issue-update-description.md  2026-06-15-phase7-stp.md  2026-06-21-project-init.md  2026-06-23-mcp-wrapper.md
docs/superpowers/specs/: 2026-06-09-atlassian-cli-phase1-design.md  2026-06-09-atlassian-cli-phase2-design.md  2026-06-10-atlassian-cli-phase3-design.md  2026-06-13-atlassian-cli-phase4a-memory-design.md  2026-06-23-mcp-wrapper-design.md
scripts/: resolve_diarrhea.py  setup_farts.py
tests/: test_mcp.py  test_phase4b.py  test_phase4c.py  test_phase5.py  test_phase6.py  test_phase7.py  test_project_init.py
