[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "atlassian-python-api>=3.41",
    "python-dotenv>=1.0",
    "pyyaml>=6",
    "chromadb>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3", "requests-mock>=1.12"]

[project.scripts]
atlassian = "atlassian_cli.main:app"

[tool.pytest.ini_options]
addopts = "-p no:logfire"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlassian_cli*"]
